--- a/config/openai.yml
+++ b/config/openai.yml
@@ -1,20 +1,30 @@
 model_list:
   - gpt-4.1
-#  - gpt-4.1-mini
-#  - gpt-4.1-nano
+  - gpt-4.1-mini
+  - gpt-4.1-nano
   - gpt-4o
-#  - gpt-4o-mini
-#  - gpt-5
-#  - gpt-5.1
-#  - gpt-5.1-chat-latest
-#  - gpt-5-chat-latest
-#  - gpt-5-mini
-#  - gpt-5-nano
-#  - o1-mini
-#  - o3
-#  - o3-mini
-# - o4-mini
+  - gpt-4o-mini
+  - gpt-5
+  - gpt-5.1
+  - gpt-5.1-chat-latest
+  - gpt-5-chat-latest
+  - gpt-5-mini
+  - gpt-5-nano
 temperature: 0.1
+
+model_temps:
+  gpt-4.1: 0.1
+  gpt-4.1-mini: 0.1
+  gpt-4.1-nano: 0.1
+  gpt-4o: 0.1
+  gpt-4o-mini: 0.1
+  gpt-5.1: 0.1
+  gpt-5-chat-latest: 0.1
+  gpt-5: 1.0
+  gpt-5.1-chat-latest: 1.0
+  gpt-5-mini: 1.0
+  gpt-5-nano: 1.0
+
 output_dir: results
 prompts_dir: prompts
 
